commit: agent analytics dashboard

--- a/mkdocs.en.gale.yml
+++ b/mkdocs.en.gale.yml
@@ -191,5 +191,7 @@ nav:
       - Integrate with Weights & Biases: settings/integrations/integrate-with-wandb.md
     - Monitoring: 
       - About Monitoring: settings/monitoring/overview.md
-      - Audit Logs: settings/monitoring/audit-logs.md      
+      - Audit Logs: settings/monitoring/audit-logs.md
+      - Analytics:
+        - Agents Analytics Dashboard: settings/monitoring/analytics/agent-analytics-dashboard.md      
    
